# grpc-bracket

./: .gitignore  CHANGELOG.md  cabal.project  grpc-bracket.cabal
src/GRPC/Bracket/: Logging.hs  Orphans.hs  RecordTraversable.hs  Server.hs  Types.hs
