cabal-version:      3.0
name:               grpc-bracket
version:            0
synopsis:           high-level gRPC interface
-- description:
homepage:           https://github.com/fumieval/grpc-bracket
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fumiaki Kinoshita
maintainer:         fumiexcel@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        GRPC.Bracket.RecordTraversable
        GRPC.Bracket.Orphans
        GRPC.Bracket.Logging
        GRPC.Bracket.Server
        GRPC.Bracket.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.0.0 && <5,
        aeson,
        containers,
        grpc-haskell,
        proto3-suite,
        bytestring,
        text
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        GADTs
        StrictData
        NoFieldSelectors
